...
            "state" : "translated",
            "value" : "最远QSO"
          }
        }
      }
    },
    "General" : {
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Allgemein"
          }
...
            "state" : "translated",
            "value" : "QSL状态"
          }
        }
      }
    },
    "QSO Details" : {
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "QSO-Details"
          }
...
            "state" : "translated",
            "value" : "卫星"
          }
        }
      }
    },
    "Save" : {
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Sichern"
          }
...
